@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Wed Nov 10 14:51 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Replaced bulky timer mechanism with a simple one.
+
 Fri Nov 05 17:21 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Fixed inode finding bug which caused mount problems.
